✨ feat: create IconContainer component

--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -1,7 +1,8 @@
 ---
 import CustomParagraph from '../shared/CustomParagraph.astro';
-import IconElement from '../shared/IconElement.astro';
-
+import IconContainer from '../icons/IconContainer.astro';
+import IconLink from '../icons/IconLink.astro';
+import IconGithub from '../icons/IconGithubLink.astro';
 export interface Props {
 	id: string;
 	title: string;
@@ -58,25 +59,17 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 				</CustomParagraph>
 			</div>
 			<div class="even-self-child m-1 flex flex-row self-start">
-				<a href={githubLink} aria-label={anchorLabel} class="h-8"
-					><IconElement
-						height="h-auto"
-						width="w-7"
-						iconType="github"
-					/></a
-				>
+				<a href={githubLink} aria-label={anchorLabel} class="h-8">
+					<IconContainer height="h-auto" width="w-7">
+						<IconGithub />
+					</IconContainer>
+				</a>
 				{
 					website !== undefined && (
 						<a href={website} aria-label={anchorLabel} class="h-7">
-							 <!–– 
-							 TODO: add a new icon
-							 <IconElement
-								height="h-auto"
-								width="w-7"
-								iconType="ph:link-bold"
-							/>
-							 ––>
-							
+							<IconContainer height="h-auto" width="w-7">
+								<IconLink />
+							</IconContainer>
 						</a>
 					)
 				}
