🐞 fix: fix card icons

--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -62,7 +62,7 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 			</div>
 			<div class="even-self-child m-1 flex flex-row self-start">
 				<IconLinkContainer
-					height="h-auto"
+					height="h-7"
 					width="w-7"
 					href={githubLink}
 					title={anchorLabel}
@@ -73,7 +73,7 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 				{
 					website !== undefined && (
 						<IconLinkContainer
-							height="h-auto"
+							height="h-7"
 							width="w-7"
 							href={website}
 							title={anchorLabel}
