--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Presentation from '../components/Presentation.astro';
 		}
 	});
 </script>
-<!-- TODO: Add skills --><!-- TODO: download icons https://svgl.vercel.app/ https://tabler.io/icons -->
+<!-- TODO: Add skills -->
 <Layout title="Carlos Jorge's personal portfolio website">
 	<Header />
 	<main>
