🐞 fix: center vertically icons

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -22,9 +22,7 @@ import IconCode from '../icons/IconCode.astro';
 				</Link>
 			</li>
 			<li class="mx-6 flex flex-row gap-x-6">
-				<Link href="#work" arialLabel="See my work experience">
-					Projects
-				</Link>
+				<Link href="#work" arialLabel="See my projects">Projects</Link>
 				<Link
 					href="#aboutMe"
 					arialLabel="Additional information about me"
