🐞 fix: change arial label of Published project link

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -58,7 +58,7 @@ import IconTwitter from '../icons/IconTwitter.astro';
 				<span>
 					<CustomLink
 						href="https://github.com/carlosjorger/carlosjorger.github.io"
-						arialLabel="Github project link"
+						arialLabel="Link to project published on GitHub"
 					>
 						Published
 					</CustomLink>
