📃 docs: Add new TODOs

--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -1,10 +1,9 @@
 ---
 import CustomParagraph from '../shared/CustomParagraph.astro';
-import IconContainer from '../icons/IconContainer.astro';
 import IconLink from '../icons/IconLink.astro';
 import IconGithub from '../icons/IconGithubLink.astro';
 import IconLinkContainer from '../icons/IconLinkContainer.astro';
-
+// TODO: add tags https://www.youtube.com/watch?v=HEMvsJTBweY&t=3941s
 export interface Props {
 	id: string;
 	title: string;
