--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -8,10 +8,11 @@ import Subtitle from '../shared/Subtitle.astro';
 		<header class="reveal my-7 mb-2">
 			<Subtitle left>
 				Some projects<br />
-				 I've made
+				I've made
 			</Subtitle>
 		</header>
 
+		<!-- TODO: use Dynamic HTML list instead https://docs.astro.build/en/core-concepts/astro-syntax/ -->
 		<Project
 			id="online-cv-maker"
 			description="An online cv maker web application used to design a custom curriculum vitae."
