--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -1,6 +1,45 @@
 ---
 import Project from './Project.astro';
 import Subtitle from '../shared/Subtitle.astro';
+type Project = {
+	id: string;
+	description: string;
+	title: string;
+	anchorLabel: string;
+	githubLink: string;
+	imageSrc: string;
+	website?: string;
+};
+const projects = [
+	{
+		id: 'online-cv-maker',
+		description:
+			'An online cv maker web application used to design a custom curriculum vitae.',
+		title: 'Cuvimaker',
+		anchorLabel: 'See my online cv maker github project',
+		githubLink: 'https://github.com/carlosjorger/cuvimaker',
+		imageSrc: '[&.visibleImg]:bg-cuvimakerExample',
+		website: 'https://cuvimaker.netlify.app/',
+	},
+	{
+		id: 'rusty-copier',
+		description: 'Its a copier implemented in rust programming language.',
+		title: 'Rusty Copier',
+		anchorLabel: 'See my rusty copier github project',
+		githubLink: 'https://github.com/carlosjorger/rustycopier',
+		imageSrc: '[&.visibleImg]:bg-rustycopier',
+	},
+	{
+		id: 'angular-portfolio',
+		description:
+			'It is a personal portfolio builded with angular using really cool animation (Angular animations).',
+		title: 'Angular Portfolio',
+		anchorLabel: 'See my portfolio github project',
+		githubLink: 'https://github.com/carlosjorger/portfolio',
+		imageSrc: '[&.visibleImg]:bg-portfolio',
+		website: 'https://carlosjorger.github.io/portfolio/',
+	},
+] as Project[];
 ---
 
 <section id="work">
@@ -11,33 +50,6 @@ import Subtitle from '../shared/Subtitle.astro';
 				I've made
 			</Subtitle>
 		</header>
-
-		<!-- TODO: use Dynamic HTML list instead https://docs.astro.build/en/core-concepts/astro-syntax/ -->
-		<Project
-			id="online-cv-maker"
-			description="An online cv maker web application used to design a custom curriculum vitae."
-			title="Cuvimaker"
-			anchorLabel="See my online cv maker github project"
-			githubLink="https://github.com/carlosjorger/cuvimaker"
-			imageSrc="[&.visibleImg]:bg-cuvimakerExample"
-			website="https://cuvimaker.netlify.app/"
-		/>
-		<Project
-			id="rusty-copier"
-			description="Its a copier implemented in rust programming language."
-			title="Rusty Copier"
-			anchorLabel="See my rusty copier github project"
-			githubLink="https://github.com/carlosjorger/rustycopier"
-			imageSrc="[&.visibleImg]:bg-rustycopier"
-		/>
-		<Project
-			id="angular-portfolio"
-			description="It is a personal portfolio builded with angular using really cool animation (Angular animations)."
-			title="Angular Portfolio"
-			anchorLabel="See my portfolio github project"
-			githubLink="https://github.com/carlosjorger/portfolio"
-			imageSrc="[&.visibleImg]:bg-portfolio"
-			website="https://carlosjorger.github.io/portfolio/"
-		/>
+		{projects.map((project) => <Project {...project} />)}
 	</div>
 </section>
