✨ feat: change colors

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -21,7 +21,7 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 			</div>
 			<div class="reveal">
 				<h2
-					class="mx-0 my-3 animate-presentation-main-skill text-4xl text-[2.52rem] font-bold max-sm:mt-4"
+					class="text-4.5xl mx-0 my-3 animate-presentation-main-skill font-bold max-sm:mt-4"
 				>
 					Welcome to my personal portfolio!
 				</h2>
