--- a/src/components/shared/Subtitle.astro
+++ b/src/components/shared/Subtitle.astro
@@ -8,7 +8,7 @@ const { center = false, left = false, right = false } = Astro.props;
 ---
 
 <h2
-	class="reveal my-2 text-5xl font-bold text-[var(--default-font-color)]"
+	class="reveal text-4.5xl my-2 font-bold text-[var(--default-font-color)]"
 	class:list={[
 		{ 'text-left': left, 'text-center': center, 'text-right': right },
 	]}
