--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -32,7 +32,7 @@ const projects = [
 	{
 		id: 'angular-portfolio',
 		description:
-			'It is a personal portfolio builded with angular using really cool animation (Angular animations).',
+			'It is a personal portfolio built with angular using really cool animation (Angular animations).',
 		title: 'Angular Portfolio',
 		anchorLabel: 'See my portfolio github project',
 		githubLink: 'https://github.com/carlosjorger/portfolio',
