--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,8 @@
 :root {
 	--default-font-family: 'Lato', sans-serif;
 	--default-font-color: rgb(222, 207, 253);
-	--default-font-color2: hsl(259.57, 40%, 80.2%, 0.7);
+	--default-font-color2: hsl(259.57, 70%, 90.2%, 0.65);
+	--default-font-color3: hsl(259.57, 30%, 70.2%);
 
 	--default-secundary-font-color: rgb(6, 232, 232);
 	--default-secundary-font-color-2: hsl(180, 50%, 46.67%, 0.9);
