🦄 refactor: refactor props

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -66,14 +66,14 @@ const icons = [
 				<span>
 					<CustomLink
 						href="https://github.com/carlosjorger/carlosjorger.github.io"
-						arialLabel="Link to project published on GitHub"
+						aria-label="Link to project published on GitHub"
 					>
 						Published
 					</CustomLink>
 					in
 					<CustomLink
 						href="https://pages.github.com/"
-						arialLabel="Github pages link"
+						aria-label="Github pages link"
 					>
 						Github Page
 					</CustomLink>
