--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -65,8 +65,7 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 			</div>
 			<div class="even-self-child m-1 flex flex-row self-start">
 				<IconLinkContainer
-					height="h-7"
-					width="w-7"
+					class="h-7 w-7"
 					href={githubLink}
 					title={anchorLabel}
 				>
@@ -76,8 +75,7 @@ const { id, title, description, anchorLabel, githubLink, imageSrc, website } =
 				{
 					website !== undefined && (
 						<IconLinkContainer
-							height="h-7"
-							width="w-7"
+							class="h-7 w-7"
 							href={website}
 							title={anchorLabel}
 						>
