--- a/src/components/icons/IconContainer.astro
+++ b/src/components/icons/IconContainer.astro
@@ -1,16 +1,15 @@
 ---
 export interface Props {
 	id?: string;
-	height: string;
-	width: string;
+	class?: string;
 }
-const { height, width, id = undefined } = Astro.props;
+const { id = undefined } = Astro.props;
 ---
 
 <i
 	id={id}
 	class="flex flex-col justify-center bg-no-repeat text-teal-300 ease-in-out hover:text-black hover:drop-shadow-[0rem_0rem_0.3rem_aqua] hover:transition-all hover:duration-500"
-	class:list={[height, width]}
+	class:list={[Astro.props.class]}
 >
 	<slot />
 </i>
