--- a/src/components/Header/Link.astro
+++ b/src/components/Header/Link.astro
@@ -1,9 +1,9 @@
 ---
 export interface Props {
 	href: string;
-	arialLabel: string;
+	'aria-label': string;
 }
-const { href, arialLabel } = Astro.props;
+const { href } = Astro.props;
 const sectionIdWhitoutHome = href.replace('#', '');
 const sectionId = sectionIdWhitoutHome ? sectionIdWhitoutHome : 'home';
 ---
@@ -30,9 +30,8 @@ const sectionId = sectionIdWhitoutHome ? sectionIdWhitoutHome : 'home';
 <custom-link data-section-id={sectionId}>
 	<a
 		class="change-sidebar mx-0.5 text-[var(--default-font-color2)] no-underline transition-all duration-200 ease-in-out hover:text-[var(--default-secundary-font-color)] hover:drop-shadow-[0rem_0rem_0.3rem_aqua] [&.active]:text-[var(--default-secundary-font-color)] [&.active]:drop-shadow-[0rem_0rem_0.3rem_aqua]"
-		href={href}
 		class:list={[`link-${sectionId}`]}
-		aria-label={arialLabel}
+		{...Astro.props}
 	>
 		<slot />
 	</a>
