📃 docs: Add TODOs

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -22,6 +22,7 @@ import IconCode from '../icons/IconCode.astro';
 				</Link>
 			</li>
 			<li class="mx-6 flex flex-row gap-x-6">
+				<!-- TODO: improve design of header -->
 				<Link href="#work" aria-label="See my projects">Projects</Link>
 				<Link
 					href="#aboutMe"
