--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -17,6 +17,7 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 			Currently, I'm also working on frontend technologies like angular,
 			vue, html, css.
 		</CustomParagraph>
+		<!-- TODO: make colors duller -->
 		<a
 			class="reveal mt-2 rounded-md border-2 border-teal-300 px-8 py-4 text-center text-2xl font-bold text-teal-300 transition-colors duration-500 ease-out hover:bg-teal-300 hover:text-[--default-background-color] max-sm:mt-12"
 			href="/pdfs/resume.pdf"
