🐞 fix: reduce text in Contact section

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -40,8 +40,7 @@ const icons = [
 				<div class="reveal mx-0 my-4 text-center">
 					<CustomParagraph>
 						I'm always open for new job oportunities or answer any
-						question. You can reach me through the following social
-						networks:
+						question. You can reach me through:
 					</CustomParagraph>
 				</div>
 				<address
