✨ feat: make colors duller of Curriculum Vitae button

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -17,9 +17,8 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 			Currently, I'm also working on frontend technologies like angular,
 			vue, html, css.
 		</CustomParagraph>
-		<!-- TODO: make colors duller -->
 		<a
-			class="reveal mt-2 rounded-md border-2 border-teal-300 px-8 py-4 text-center text-2xl font-bold text-teal-300 transition-colors duration-500 ease-out hover:bg-teal-300 hover:text-[--default-background-color] max-sm:mt-12"
+			class="reveal mt-2 rounded-md border-2 border-[--default-secundary-font-color-2] py-2.5 text-center text-2xl font-bold text-teal-300 transition-colors duration-500 ease-out hover:bg-teal-300 hover:text-[--default-background-color] max-sm:mt-10"
 			href="/pdfs/resume.pdf"
 			target="_blank"
 			aria-label="Download Curriculum Vitae pdf">Curriculum Vitae</a
