--- a/src/components/Header/Link.astro
+++ b/src/components/Header/Link.astro
@@ -2,6 +2,7 @@
 export interface Props {
 	href: string;
 	'aria-label': string;
+	target?: string;
 }
 const { href } = Astro.props;
 const sectionIdWhitoutHome = href.replace('#', '');
@@ -29,10 +30,9 @@ const sectionId = sectionIdWhitoutHome ? sectionIdWhitoutHome : 'home';
 </script>
 <custom-link data-section-id={sectionId}>
 	<a
-		class="change-sidebar mx-0.5 text-[var(--default-font-color2)] no-underline transition-all duration-200 ease-in-out hover:text-[var(--default-secundary-font-color)] hover:drop-shadow-[0rem_0rem_0.3rem_aqua] [&.active]:text-[var(--default-secundary-font-color)] [&.active]:drop-shadow-[0rem_0rem_0.3rem_aqua]"
+		class="change-sidebar mx-0.5 h-auto text-[var(--default-font-color2)] no-underline transition-all duration-200 ease-in-out hover:text-[var(--default-secundary-font-color)] hover:drop-shadow-[0rem_0rem_0.3rem_aqua] [&.active]:text-[var(--default-secundary-font-color)] [&.active]:drop-shadow-[0rem_0rem_0.3rem_aqua]"
 		class:list={[`link-${sectionId}`]}
 		{...Astro.props}
-		target="_blank"
 	>
 		<slot />
 	</a>
