🐞 fix: some styles

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -21,7 +21,7 @@ import IconCode from '../icons/IconCode.astro';
 					</IconContainer>
 				</Link>
 			</li>
-			<li class="mx-6 flex flex-row gap-x-6">
+			<li class="flex flex-row gap-x-6">
 				<Link href="#work" aria-label="See my projects">Projects</Link>
 				<Link
 					href="#aboutMe"
