--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -21,13 +21,13 @@ import CustomParagraph from './shared/CustomParagraph.astro';
 			</div>
 			<div class="reveal">
 				<h2
-					class="text-4.5xl mx-0 my-3 animate-presentation-main-skill font-bold max-sm:mt-4"
+					class="mx-0 my-3 animate-presentation-main-skill text-4.5xl font-bold max-sm:mt-4"
 				>
 					Welcome to my personal portfolio!
 				</h2>
 			</div>
 			<div
-				class="mx-0 my-6 animate-presentation-description break-words max-sm:mt-7"
+				class="mx-0 my-3 animate-presentation-description break-words max-sm:mt-7"
 			>
 				<CustomParagraph>
 					Cuban computer scientist from Havana University. Currently
