✨ feat: add gradient to footer

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -33,7 +33,9 @@ const icons = [
 ---
 
 <footer>
-	<div class="m-1 grid h-screen max-sm:h-[70dvh]">
+	<div
+		class="grid h-screen bg-[radial-gradient(ellipse_130%_100%_at__50%_-20%,rgba(255,255,255,0)_50%,var(--default-background-color-darker))] max-sm:h-[70dvh]"
+	>
 		<div id="contact" class="flex flex-col justify-center">
 			<section class="z-0 mt-8 w-1/2 p-2 max-sm:mt-0 max-sm:w-[90%]">
 				<Subtitle center>Contact</Subtitle>
