--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,7 +7,9 @@
 	--default-secundary-font-color: rgb(6, 232, 232);
 	--default-secundary-font-color-2: hsl(180, 50%, 46.67%, 0.9);
 
-	--default-background-color: hsl(271.2, 35.21%, 11%);
+	--default-background-color: hsl(271.2, 35.21%, 15%);
+	--default-background-color-darker: hsla(250, 35.21%, 8%, 0.8);
+
 	--default-background-color-shadow: rgb(15, 12, 20);
 	background-color: var(--default-background-color);
 	font-size: 25px;
