--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -29,7 +29,7 @@ const i18n = getI18N({ currentLocale });
 	<main>
 		<Presentation {...i18n} />
 		<Work />
-		<AboutMe />
+		<AboutMe {...i18n} />
 	</main>
 	<Footer />
 </Layout>
