✨ feat: Add internationalization to Footer section

--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -31,5 +31,5 @@ const i18n = getI18N({ currentLocale });
 		<Work />
 		<AboutMe {...i18n} />
 	</main>
-	<Footer />
+	<Footer {...i18n} />
 </Layout>
