--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -7,26 +7,52 @@ import IconMail from '../icons/IconMail.astro';
 import IconGithub from '../icons/IconGithub.astro';
 import IconLinkedin from '../icons/IconLinkedin.astro';
 import IconTwitter from '../icons/IconTwitter.astro';
+export interface Props {
+	CONTACT_TITLE: string;
+	CONTACT_DESCRIPTION: string;
+	CONTACT_FOOTER_PUBLISHED: string;
+	CONTACT_FOOTER_PUBLISHED_ARIAL_LABEL: string;
+	CONTACT_FOOTER_AFTER_PUBLISHED: string;
+	CONTACT_FOOTER_GITHUB_PAGE: string;
+	CONTACT_FOOTER_GITHUB_PAGE_ARIAL_LABEL: string;
+	CONTACT_MAIL_ARIAL_LABEL: string;
+	CONTACT_GITHUB_ARIAL_LABEL: string;
+	CONTACT_LINKEDIN_ARIAL_LABEL: string;
+	CONTACT_TWITTER_ARIAL_LABEL: string;
+}
 
+const {
+	CONTACT_TITLE,
+	CONTACT_DESCRIPTION,
+	CONTACT_FOOTER_PUBLISHED,
+	CONTACT_FOOTER_PUBLISHED_ARIAL_LABEL,
+	CONTACT_FOOTER_AFTER_PUBLISHED,
+	CONTACT_FOOTER_GITHUB_PAGE,
+	CONTACT_FOOTER_GITHUB_PAGE_ARIAL_LABEL,
+	CONTACT_MAIL_ARIAL_LABEL,
+	CONTACT_GITHUB_ARIAL_LABEL,
+	CONTACT_LINKEDIN_ARIAL_LABEL,
+	CONTACT_TWITTER_ARIAL_LABEL,
+} = Astro.props;
 const icons = [
 	{
 		href: 'mailto:rodriguezcuelloc@gmail.com',
-		title: 'contact via this email address',
+		title: CONTACT_MAIL_ARIAL_LABEL,
 		iconComponent: IconMail,
 	},
 	{
 		href: 'https://github.com/carlosjorger',
-		title: 'See my github profile',
+		title: CONTACT_GITHUB_ARIAL_LABEL,
 		iconComponent: IconGithub,
 	},
 	{
 		href: 'https://www.linkedin.com/in/carlosjorger/',
-		title: 'See my linkedin profile and connect with me',
+		title: CONTACT_LINKEDIN_ARIAL_LABEL,
 		iconComponent: IconLinkedin,
 	},
 	{
 		href: 'https://twitter.com/carlosjorgerc',
-		title: 'See my twitter profile and follow me',
+		title: CONTACT_TWITTER_ARIAL_LABEL,
 		iconComponent: IconTwitter,
 	},
 ];
@@ -38,11 +64,10 @@ const icons = [
 	>
 		<div id="contact" class="flex flex-col justify-center">
 			<section class="z-0 mt-8 w-1/2 p-2 max-sm:mt-0 max-sm:w-[90%]">
-				<Subtitle center>Contact</Subtitle>
+				<Subtitle center>{CONTACT_TITLE}</Subtitle>
 				<div class="reveal mx-0 my-4 text-center">
 					<CustomParagraph>
-						I'm always open for new job oportunities or answer any
-						question. You can reach me through:
+						{CONTACT_DESCRIPTION}
 					</CustomParagraph>
 				</div>
 				<address
@@ -67,16 +92,16 @@ const icons = [
 				<span>
 					<CustomLink
 						href="https://github.com/carlosjorger/carlosjorger.github.io"
-						aria-label="Link to project published on GitHub"
+						aria-label={CONTACT_FOOTER_PUBLISHED_ARIAL_LABEL}
 					>
-						Published
+						{CONTACT_FOOTER_PUBLISHED}
 					</CustomLink>
-					in
+					{CONTACT_FOOTER_AFTER_PUBLISHED}
 					<CustomLink
 						href="https://pages.github.com/"
-						aria-label="Github pages link"
+						aria-label={CONTACT_FOOTER_GITHUB_PAGE_ARIAL_LABEL}
 					>
-						Github Page
+						{CONTACT_FOOTER_GITHUB_PAGE}
 					</CustomLink>
 					<span></span>
 				</span>
