✨ feat: Add internationalization in header component

--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -25,7 +25,7 @@ const i18n = getI18N({ currentLocale });
 </script>
 <!-- TODO: Add skills -->
 <Layout title="Carlos Jorge's personal portfolio website">
-	<Header />
+	<Header {...i18n} />
 	<main>
 		<Presentation {...i18n} />
 		<Work />
