--- a/src/components/Header/SideBarLink.astro
+++ b/src/components/Header/SideBarLink.astro
@@ -3,15 +3,16 @@ import Link from './Link.astro';
 export interface Props {
 	href: string;
 	label: string;
+	'aria-label': string;
 }
-const { href, label } = Astro.props;
+const { label, ...atrributes } = Astro.props;
 ---
 
 <li
-	class="flex w-52 items-center justify-start p-2 transition-colors ease-in-out active:bg-[#241c2d]"
+	class="flex w-60 items-center justify-start p-2 transition-colors ease-in-out active:bg-[#241c2d]"
 >
 	<slot />
-	<Link href={href} aria-label="Go to presentation">
+	<Link {...atrributes}>
 		<h2 class="pl-3 text-3xl">{label}</h2>
 	</Link>
 </li>
